[tool.poetry]
name = "velib"
version = "0.1.0"
description = ""
authors = ["Thomas Kuoch <kuoch.thomas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
numpy = "^1.24.3"
pandas = "^2.0.2"
pydeck = "^0.8.0"
requests = "^2.31.0"
matplotlib = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
